# toolspaedeia

./: .gitignore  .pre-commit-config.yaml  Dockerfile  deploy.sh  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: Ghid Licenta  Ghid licenta departament  Sablon Licenta  THESIS.md
docs/bibliography/: Server-Driven Web Apps with htmx -- R_ Mark Volkmann.txt  cloud based mobile learning.txt  e-learning and mobile learning.txt  mobile assisted language learning.txt  poverty reduction tool.txt  simplicity -- Dave Thomas -- 2025.txt  the use of generative ai in e-education.txt
docs/diagrams/: component_diagram.mmd  component_diagram_backend.mmd  component_diagram_frontend.mmd  course_publishing_flow.mmd  course_publishing_flow_create.mmd  course_publishing_flow_publish.mmd  deployment_diagram.mmd  development_lifecycle.mmd  er_diagram.mmd  er_diagram_courses.mmd  er_diagram_users.mmd  mvt_architecture.mmd  pwa_caching_flow.mmd  refund_flow.mmd  stripe_payment_flow.mmd  tag_generation_flow.mmd  use_case_admin.mmd  use_case_diagram.mmd  use_case_publisher.mmd  use_case_student.mmd  use_case_student_browse.mmd  use_case_student_learn.mmd  ux_state_diagram.mmd  ux_state_learning.mmd  ux_state_navigation.mmd
example_courses/: 01-python-for-beginners.md  02-student-user-guide.md  02-toolspaedeia-student-guide.md  03-advanced-authoring-import-export.md  03-toolspaedeia-advanced-authoring.md  04-python-intermediate-oop-modules.md  04-python-intermediate.md  05-python-data-science-pandas.md  05-python-data-science.md  06-python-django.md  06-python-web-development-django.md  07-python-web-scraping.md  08-go-backend-systems.md  08-go-backend.md  09-go-concurrency-patterns.md  09-go-concurrency.md  10-c-fundamentals.md  11-c-memory-management-pointers.md  11-c-memory-management.md  12-cpp-oop.md  13-cpp-modern-features.md  13-cpp-modern.md  14-html5-semantic-structure.md  14-html5-structure.md  15-css3-flexbox-grid.md  15-css3-layout.md  16-lean-frontend-htmx.md  17-sql-fundamentals.md  18-sql-optimization.md  19-microeconomics.md  20-macroeconomics.md  27-algebra-i.md  python-for-beginners.md
toolspaedeia/: db.sqlite3  manage.py
toolspaedeia/common/: mixins.py  services.py
toolspaedeia/courses/: admin.py  apps.py  import_export.py  imports.py  markdown.py  models.py  quizzes.py  service.py  stripe_checkout.py  suggestions.py  test_integration.py  tests.py  urls.py  utils.py  views.py
toolspaedeia/courses/migrations/: 0001_initial.py  0002_alter_course_end_date_alter_course_start_date.py  0003_module_description.py  0004_module_order.py  0005_alter_course_options.py  0006_course_price.py  0007_course_publisher.py  0008_moduleprogression.py  0009_alter_moduleprogression_module.py  0010_alter_course_options.py  0011_question_answer_quizz_question_quiz.py  0012_rename_quizz_quiz.py  0013_alter_answer_options_alter_course_options_and_more.py  0014_alter_quiz_module.py  0015_course_is_draft_module_is_draft.py  0016_resources.py  0017_quizattempt.py  0018_quiz_track_attempts.py  0019_coursetag.py  0020_remove_course_end_date_remove_course_start_date.py
toolspaedeia/courses/templates/: course_detail.html  course_module_detail.html  courses_base.html  courses_user_list.html
toolspaedeia/purchases/: admin.py  context_processors.py  models.py  tests.py  urls.py  views.py
toolspaedeia/purchases/migrations/: 0001_purchase.py  0002_rename_stripe_checkout_session_id_purchase_stripe_payment_id.py  0003_alter_purchase_course_alter_purchase_user.py
toolspaedeia/savings/: admin.py  apps.py  models.py  urls.py  views.py
toolspaedeia/savings/migrations/: 0001_initial.py  0002_savingsaccount_name.py
toolspaedeia/static/: serviceworker.js
toolspaedeia/templates/: base.html  home.html  no-internet.html  superbase.html
toolspaedeia/templates/courses/: browse_courses.html  course_detail.html  course_list.html  course_module_detail.html  course_publish.html  course_update.html  courses_browse_list.html  courses_user_list.html  module_create.html  module_detail.html  module_update.html  user_courses.html
toolspaedeia/templates/savings/: savingsaccount_detail.html  savingsaccount_list.html
toolspaedeia/templates/users/: login.html  profile.html
toolspaedeia/templates/visualizer/: visualizer.html
toolspaedeia/toolspaedeia/: asgi.py  mixins.py  settings.py  settings_pythonanywhere.py  urls.py  utils.py  views.py  wsgi.py
toolspaedeia/users/: admin.py  context_processors.py  forms.py  middleware.py  models.py  test_integration.py  tests.py  urls.py  views.py
toolspaedeia/users/migrations/: 0001_initial.py  0009_purchase.py  (+14 more)
toolspaedeia/visualizer/: apps.py  urls.py  views.py
(+26 files in other folders)
